implementing navegation bar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fazenda Orgânica</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav>
-            
+        <nav class="nav-bar">
+            <ul>
+                <a class="nav-bar-link" href="#"><li>Início</li></a>
+                <a class="nav-bar-link" href="#"><li>Produtos</li></a>
+                <a class="nav-bar-link" href="#"><li>Quem somos</li></a>
+            </ul>
         </nav>
     </header>
 </body>
