implementing header to the page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
 </head>
 <body>
     <header>
-        <nav class="nav-bar">
+        <nav class="nav-bar" id="beginning">
             <ul>
-                <a class="nav-bar-link" href="#"><li>Início</li></a>
+                <a class="nav-bar-link" href="#beginning"><li>Início</li></a>
                 <a class="nav-bar-link" href="#"><li>Produtos</li></a>
                 <a class="nav-bar-link" href="#"><li>Quem somos</li></a>
             </ul>
         </nav>
+
+        <div class="fazenda-background">
+            <div class="fazenda-info">
+                <div class="fazenda-icon">
+                    <img src="assets/image/fazenda-logo.png" alt="">
+                </div>
+                <div class="fazenda-heading">
+                    <h1>Fazenda Orgânica</h1>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
