--- a/index.html
+++ b/index.html
@@ -30,5 +30,20 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="card-gallery">
+            <div class="card">
+                <div>
+                    <!-- <img src="assets/image/uva.png" alt="" class="card-image"> -->
+                    <h1 class="card-heading" style="background-image: url(./assets/image/banner.png);">Produção de uva</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
