adjusting and styling cards

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="nav-bar" id="beginning">
             <ul>
                 <a class="nav-bar-link" href="#beginning"><li>Início</li></a>
-                <a class="nav-bar-link" href="#"><li>Produtos</li></a>
+                <a class="nav-bar-link" href="#product"><li>Produtos</li></a>
                 <a class="nav-bar-link" href="#"><li>Quem somos</li></a>
             </ul>
         </nav>
@@ -32,11 +32,71 @@
     </header>
 
     <main>
-        <div class="card-gallery">
+        <div class="card-gallery" id="product">
+            <!-- TODO: add alternative description for images -->
             <div class="card">
                 <div>
-                    <!-- <img src="assets/image/uva.png" alt="" class="card-image"> -->
-                    <h1 class="card-heading" style="background-image: url(./assets/image/banner.png);">Produção de uva</h1>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/uva.png);">Produção de uva</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/gado.png);">Gado de corte</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/laranja.png);">Produção de laranja</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/ovelha.png);">Caprinos</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/galinha.png);">Produção de ovos</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/tomate.png);">Produção de tomate</h1>
+                    <p class="card-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
+                    </p>
+                    <div class="card-link"><a href="#">Saiba mais</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <h1 class="card-heading" style="background-image: url(./assets/image/alface.png);">Hortifruti</h1>
                     <p class="card-paragraph">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac egestas felis, et auctor neque. Vestibulum vel lorem velit. Sed ut fermentum odio. Sed ut fermentum odio.
                     </p>
