finishing off styling css

--- a/index.html
+++ b/index.html
@@ -105,5 +105,11 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div>
+            <img class="footer-image" src="assets/image/fazenda-logo.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
